# NGS_Demo_C

./: CMakeLists.txt
code/: htslib_sample.cpp
code/cdbg/: CDBG.cpp  CDBG.h  FindCandidateErr.py  KmerChoose.cpp  KmerChoose.h  KmerStat.cpp  RMtoDBG.cpp  RMtoDBG.h
code/correct/: CDBG.cpp  CDBG.h  KmerStat  KmerStat.cpp  KmerStat.h  RMtoDBG  RMtoDBG.cpp  RMtoDBG.h
code/correct/util/: Semaphore.h  ThreadPool.h  Usage.hpp
